--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,39 @@
 /* You can add global styles to this file, and also import other style files */
+html, body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+}
+
+h1 {
+    font-size: 16px;
+    font-family: Segoe UI;
+    line-height: 20px;
+    color: whitesmoke;
+    display: table-cell;
+    padding: 13px 0px 0px 20px;
+}
+
+ #heading {
+    background-color: black;
+    height: 50px;
+}
+
+.main {
+    margin: 18px;
+    border-radius: 4px;
+}
+
+div[role="form"]{
+    background-color: black;
+}
+
+#webchat {
+    position: fixed;
+    height: calc(100% - 50px);
+    width: 100%;
+    top: 50px;
+    overflow: hidden;
+}
